<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/accueil"
        app:showAsAction="always"
        android:title="@string/accueil"
        android:icon="@drawable/home"
        />
    <item
        android:id="@+id/adoption"
        app:showAsAction="always"
        android:title="@string/adoption"
        android:icon="@drawable/adoption"
        />
    <item
        android:id="@+id/signalement"
        app:showAsAction="always"
        android:title="@string/signalement"
        android:icon="@drawable/signalement"
        />
    <item
        android:id="@+id/francais"
        android:title="@string/francais"
        />
    <item
        android:id="@+id/english"
        android:title="@string/english"
        />
</menu>